# vnskey

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.claude/: settings.local.json
.github/: pull_request_template.md  typos.toml
.github/ISSUE_TEMPLATE/: bug.yml  compat-matrix-entry.yml  config.yml  feature.yml
.github/workflows/: auto-label.yml  bench-nightly.yml  ci.yml  fuzz.yml  release.yml
assets/: io.vietime.VNSKey.desktop  io.vietime.VNSKey.metainfo.xml
crates/vietime-bench/: Cargo.toml
crates/vietime-bench/src/: cli.rs  lib.rs  main.rs  model.rs  profile.rs  runner.rs  scoring.rs  vector.rs
crates/vietime-bench/src/app_runner/: chromium.rs  electron.rs  firefox.rs  gedit.rs  kate.rs  libreoffice.rs  mod.rs  vscode.rs  xdotool_helper.rs
crates/vietime-bench/src/im_driver/: fcitx5.rs  ibus.rs  mod.rs
crates/vietime-bench/src/injector/: mod.rs  xdotool.rs  ydotool.rs
crates/vietime-bench/src/session/: mod.rs  weston.rs  xvfb.rs
crates/vietime-bench/tests/: cli_smoke.rs
crates/vietime-core/: Cargo.toml
crates/vietime-core/src/: desktop.rs  distro.rs  engine.rs  env.rs  im_framework.rs  issue.rs  lib.rs  redact.rs  report.rs  session.rs
crates/vietime-core/tests/: parser_soak.rs
crates/vietime-doctor/: Cargo.toml
crates/vietime-doctor/src/: checker.rs  detector.rs  lib.rs  main.rs  orchestrator.rs  process.rs  render.rs
crates/vietime-doctor/src/apps/: mod.rs  registry.rs  resolve.rs
crates/vietime-doctor/src/checkers/: mod.rs  recommendations.rs  vd001_no_im_framework.rs  vd002_im_conflict.rs  vd003_env_mismatch.rs  vd004_missing_sdl.rs  vd005_engine_not_registered.rs  vd006_wayland_ibus.rs  vd007_electron_no_ozone.rs  vd008_chrome_x11_on_wayland.rs  vd009_env_conflict_between_files.rs  vd010_vscode_snap.rs  vd011_flatpak_no_portal.rs  vd012_legacy_input_method.rs  vd013_fcitx_addon_disabled.rs  vd014_unicode_locale_missing.rs  vd015_no_vietnamese_engine.rs
crates/vietime-doctor/src/detectors/: app_electron.rs  app_generic.rs  desktop.rs  distro.rs  env_etc_environment.rs  env_etc_profile_d.rs  env_home_profile.rs  env_process.rs  env_systemd.rs  fcitx5_config.rs  fcitx5_daemon.rs  ibus_daemon.rs  ibus_engines.rs  locale.rs  mod.rs  package_engines.rs  session.rs
crates/vietime-doctor/src/snapshots/: vietime_doctor__render__tests__render__conflict.snap  vietime_doctor__render__tests__render__empty_report.snap  vietime_doctor__render__tests__render__ubuntu_ibus_clean.snap
crates/vietime-doctor/templates/: report.md.j2
crates/vietime-doctor/tests/: app_flag.rs  cli_smoke.rs  render_snapshots.rs  schema_validation.rs
crates/vietime-doctor/tests/snapshots/: render_snapshots__distro__arch_framework_conflict.snap  render_snapshots__distro__debian_12_electron_no_ozone.snap  render_snapshots__distro__fedora_40_fcitx5_clean.snap  render_snapshots__distro__opensuse_tumbleweed_missing_sdl.snap  render_snapshots__distro__ubuntu_24_04_ibus_clean.snap  render_snapshots__distro__ubuntu_24_04_ibus_clean_plain.snap
crates/vietime-installer/: Cargo.toml
crates/vietime-installer/src/: envfile.rs  executor.rs  lib.rs  main.rs  model.rs  packageops.rs  planner.rs  pre_state.rs  snapshot.rs  sudo.rs
crates/vietime-installer/tests/: cli_smoke.rs  plan_golden.rs
crates/vietime-installer/tests/snapshots/: plan_golden__install_fcitx5_bamboo_ubuntu_24_04.snap
docs/: reproduce-locally.md
docs/blog/en/: 2026-04-26-doctor-0.1.0.md  2026-04-26-installer-0.1.0.md
docs/blog/vi/: 2026-04-26-doctor-0.1.0.md  2026-04-26-installer-0.1.0.md
docs/dev/: bench-poc.md  decisions.md  process.md
docs/dev/bug-analysis/: README.md
docs/user/en/: CHECKS.md  GLOSSARY.md  README.md  bench.md  installer.md  troubleshooting.md
docs/user/vi/: CHECKS.md  GLOSSARY.md  README.md  bench.md  contributing-test-vectors.md  installer.md  troubleshooting.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: os_release.rs  parse_etc_environment.rs
packaging/aur/vietime-doctor-bin/: PKGBUILD
packaging/aur/vietime-doctor-git/: PKGBUILD
packaging/aur/vietime-installer-bin/: PKGBUILD
packaging/aur/vietime-installer-git/: PKGBUILD
packaging/flatpak/: README.md  io.vietime.Doctor.yml
profiles/: bugs.toml  full.toml  smoke.toml
schemas/: bench-result.v1.json  report.v1.json
scripts/: check-binary-size.sh  check-report-schema.sh  check-spdx.sh  maintainer-dry-run.sh
spec/: 00-vision-and-scope.md  01-phase1-doctor.md  02-phase2-installer.md  03-phase3-test-suite.md  04-cross-cutting.md  05-roadmap-risks.md  v0.2-roadmap.md
tasks/: README.md  backlog.md  phase-0-validate.md  phase-1-doctor.md  phase-2-installer.md  phase-3-bench.md  phase-4-polish.md
test-vectors/: bugs.toml  telex.toml
