[package]
name = "vietime-bench"
description = "Compatibility matrix benchmark runner for Vietnamese IMEs on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
name = "vietime_bench"
path = "src/lib.rs"

[[bin]]
name = "vietime-bench"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
vietime-installer = { path = "../vietime-installer", version = "0.1.0" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
