[package]
name = "vietime-bench"
description = "Compatibility matrix benchmark runner for Vietnamese IMEs on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
name = "vietime_bench"
path = "src/lib.rs"

[[bin]]
name = "vietime-bench"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
vietime-installer = { path = "../vietime-installer", version = "0.2.0" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[package.metadata.deb]
maintainer = "VietIME Suite contributors <vietime@vietime.io>"
copyright = "2026 VietIME Suite contributors"
license-file = ["../../LICENSE", "4"]
extended-description = """\
vietime-bench is an automated compatibility matrix tool that tests \
Vietnamese text input across Linux applications. It produces accuracy \
scores for every (IME engine × application × session × input mode) \
combination, with 525 test vectors covering Telex input and known \
regressions."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/vietime-bench", "usr/bin/", "755"],
    ["../../docs/user/en/bench.md", "usr/share/doc/vietime-bench/README.md", "644"],
    ["../../docs/user/vi/bench.md", "usr/share/doc/vietime-bench/README.vi.md", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/vietime-bench/CHANGELOG.md", "644"],
]
