[package]
name = "vietime-doctor"
description = "Diagnose Vietnamese input method setup on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "vietime-doctor"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
insta = { workspace = true }
