[package]
name = "vietime-doctor"
description = "Diagnose Vietnamese input method setup on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "vietime-doctor"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
insta = { workspace = true }

# ─── Packaging ────────────────────────────────────────────────────────────

# cargo-deb metadata. Build with:
#   cargo install cargo-deb
#   cargo deb -p vietime-doctor
# The output lands in target/debian/vietime-doctor_<ver>_<arch>.deb.
[package.metadata.deb]
maintainer = "VietIME Suite contributors <vietime@vietime.io>"
copyright = "2026 VietIME Suite contributors"
license-file = ["../../LICENSE", "4"]
extended-description = """\
vietime-doctor is a diagnostic-only tool that inspects a Linux desktop \
for the common causes of broken Vietnamese typing: missing IM daemons, \
mismatched environment variables, Electron apps launched without \
Ozone/Wayland, and related issues. The Doctor never modifies system \
state — it only reports, with stable VD###/VR### identifiers so output \
is safe to cite in bug reports."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/vietime-doctor", "usr/bin/", "755"],
    ["../../docs/user/en/README.md", "usr/share/doc/vietime-doctor/README.md", "644"],
    ["../../docs/user/en/CHECKS.md", "usr/share/doc/vietime-doctor/CHECKS.md", "644"],
    ["../../docs/user/en/GLOSSARY.md", "usr/share/doc/vietime-doctor/GLOSSARY.md", "644"],
    ["../../docs/user/vi/README.md", "usr/share/doc/vietime-doctor/README.vi.md", "644"],
    ["../../CHANGELOG.md", "usr/share/doc/vietime-doctor/CHANGELOG.md", "644"],
]
