[package]
name = "vietime-installer"
description = "One-click installer for Vietnamese input method stacks on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "vietime-installer"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
