[package]
name = "vietime-installer"
description = "One-click installer for Vietnamese input method stacks on Linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
name = "vietime_installer"
path = "src/lib.rs"

[[bin]]
name = "vietime-installer"
path = "src/main.rs"

[dependencies]
vietime-core = { workspace = true }
vietime-doctor = { path = "../vietime-doctor", version = "0.0.1" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
